--- a/app/assets/stylesheets/components/_btns.scss
+++ b/app/assets/stylesheets/components/_btns.scss
@@ -1,3 +1,16 @@
+@media screen and (max-width: 500px) {
+  .lend-btns.mobile-inactive {
+    border: 1px rgba(0, 0, 0, 0.5) solid;
+    border-radius: 61px;
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    padding: 20px 44px;
+    text-transform: uppercase;
+    background-color: rgba($color: white, $alpha: 0.8);
+  }
+
+}
+
 .borrow-btns {
   border-radius: 61px;
   border: 1px white solid;
@@ -34,7 +47,6 @@
   padding: 20px 30px;
   text-transform: uppercase;
   background-color: rgba($color: white, $alpha: 0.8);
-
 }
 
 .lend-btns:hover {
